[gd_scene load_steps=4 format=3 uid="uid://b8kj7h1oagw8l"]

[ext_resource type="Script" path="res://scripts/falling_platform.gd" id="1_sh4rj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_teky8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evrdb"]

[node name="FallingPlatform" type="CharacterBody2D"]
script = ExtResource("1_sh4rj")
texture_name = "horizontal/Hor3.png"
risable = true
speed = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_teky8")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_evrdb")

[node name="RiseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="RiseTimer" to="." method="_on_rise_timer_timeout"]
